# redis-conn-checker

./: README.md  pyproject.toml
.github/workflows/: main.yml
src/redis-conn-checker/:  validate.py  __main__.py  actions.py  connection.py
