[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # isort
    "I",
    # whitespace
    "W",
    # list comprehensions
    "C4",
    # Code simplification
    "SIM",
    # Type checking
    "TCH"
]

[tool.poetry]
name = "redis-conn-checker"
version = "0.1.0"
description = "A tool to continuously check connectivity to ElastiCache Redis"
authors = ["ckeragala <chamarakera@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.1"
ruff = "^0.1.14"
boto3 = "^1.34.25"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
